@@ -1,6 +1,12 @@
 key1 = value1
 key2 = value2
 
+# this is a comment
+
 [section1]
 key1 = "this is value 1 quoted"
 key2 = this is value 2 unquoted
+
+[section2]
+key1 = new section
+key1 = replaced value
