@@ -28,4 +28,15 @@ extern "C" int main()
 {
 	keydata *keys;
 	keyfile myfile("keydata.conf");
+
+	keys = myfile.get();
+	assert(stricmp(keys->get("key2"), "value2") == 0);
+
+	keys = myfile["section1"];
+	assert(keys != NULL);
+	assert(stricmp(keys->get("key1"), "this is value 1 quoted") == 0);
+
+	keys = myfile["section2"];
+	assert(keys != NULL);
+	assert(stricmp(keys->get("key1"), "replaced value") == 0);
 };
